--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@salesforce/core": "^2",
     "axios": "^0.27.2",
     "csv-writer": "^1.6.0",
+    "fast-csv": "^4.3.6",
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.29.3",
-    "tslib": "^2"
+    "papaparse": "^5.3.2",
+    "tslib": "^2",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
